syntax = "proto3";
package mezo.poa.v1;

import "gogoproto/gogo.proto";
import "mezo/poa/v1/poa.proto";

option go_package = "github.com/mezo-org/mezod/x/poa/types";

// GenesisState defines the module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
  // owner is the initial owner of the validator pool in Bech32 format.
  string owner = 2;
  // validators defines the initial list of validators.
  repeated Validator validators = 3 [ (gogoproto.nullable) = false ];
  // privilege_assignments defines the initial list of validator privilege assignments.
  repeated ValidatorPrivilegeAssignment privilege_assignments = 4 [ (gogoproto.nullable) = false ];
}
